--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_INTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE" />
-
+    <uses-permission android:name="android.permission.BLUETOOTH"
+         />
     <application
         android:largeHeap="true"
         android:name=".App"
@@ -23,12 +24,18 @@
         android:theme="@style/Theme.AppNTP"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+
         <activity
             android:name="com.journeyapps.barcodescanner.CaptureActivity"
             android:screenOrientation="portrait"
             tools:replace="screenOrientation" />
+<!--        <activity-->
+<!--            android:name=".ui.activity.PdfViewerActivity"-->
+<!--            android:exported="false"-->
+<!--            android:label="@string/title_activity_pdf_viewer"-->
+<!--            android:theme="@style/Theme.AppNTP" />-->
         <activity
-            android:name=".ui.activity.PdfViewerActivity"
+            android:name=".ui.activity.PdfViewer"
             android:exported="false"
             android:label="@string/title_activity_pdf_viewer"
             android:theme="@style/Theme.AppNTP" />
