--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,10 +8,9 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_INTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.BLUETOOTH"
-         />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+
     <application
-        android:largeHeap="true"
         android:name=".App"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -19,47 +18,43 @@
         android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppNTP"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-
         <activity
-            android:name="com.journeyapps.barcodescanner.CaptureActivity"
-            android:screenOrientation="portrait"
-            tools:replace="screenOrientation" />
-<!--        <activity-->
-<!--            android:name=".ui.activity.PdfViewerActivity"-->
-<!--            android:exported="false"-->
-<!--            android:label="@string/title_activity_pdf_viewer"-->
-<!--            android:theme="@style/Theme.AppNTP" />-->
-        <activity
-            android:name=".ui.activity.PdfViewer"
-            android:exported="false"
-            android:label="@string/title_activity_pdf_viewer"
-            android:theme="@style/Theme.AppNTP" />
-        <activity
-            android:name=".MainActivity"
+            android:name=".ui.activity.HostActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.AppNTP">
+            android:theme="@style/Theme.AppNTPCompat">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ui.activity.LoginActivity"
-            android:exported="false"
-            android:label="@string/title_activity_login"
-            android:theme="@style/Theme.AppNTP" />
-        <activity
-            android:name=".ui.activity.HoSoBenhAnActivity"
-            android:exported="false"
-            android:label="HoSoBenhAnActivity"
-            android:theme="@style/Theme.AppNTP"></activity>
     </application>
+
+    <!--        <activity-->
+    <!--            android:name="com.journeyapps.barcodescanner.CaptureActivity"-->
+    <!--            android:screenOrientation="portrait"-->
+    <!--            tools:replace="screenOrientation" />-->
+    <!--        <activity-->
+    <!--            android:name=".ui.activity.PdfViewer"-->
+    <!--            android:exported="false"-->
+    <!--            android:label="@string/title_activity_pdf_viewer"-->
+    <!--            android:theme="@style/Theme.AppNTP" />-->
+<!--    <activity&ndash;&gt;-->
+    <!--            android:name=".ui.activity.LoginActivity"-->
+    <!--            android:exported="false"-->
+    <!--            android:label="@string/title_activity_login"-->
+    <!--            android:theme="@style/Theme.AppNTP" />-->
+    <!--        <activity-->
+    <!--            android:name=".ui.activity.HoSoBenhAnActivity"-->
+    <!--            android:exported="false"-->
+    <!--            android:label="HoSoBenhAnActivity"-->
+    <!--            android:theme="@style/Theme.AppNTP" />-->
 
 </manifest>
