--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,11 +21,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
+        android:hardwareAccelerated="true"
         tools:targetApi="31">
         <activity
-            android:name=".ui.activity.HostActivity"
+            android:name=".ui.activity.LoginActivity"
             android:exported="true"
-            android:label="@string/app_name"
+
             android:theme="@style/Theme.Material3.DayNight.NoActionBar"
             >
             <intent-filter>
@@ -33,6 +34,18 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.journeyapps.barcodescanner.CaptureActivity"
+            android:screenOrientation="fullSensor"
+            tools:replace="screenOrientation"
+            tools:ignore="DiscouragedApi" />
+
+        <activity android:name=".ui.activity.HostActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.Material3.DayNight.NoActionBar"
+            >
         </activity>
     </application>
 
